add saveing snippets to database; change to larger fetch size to avoid conn time out

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,11 @@ repositories{
     // }
 }
 
+run {
+    if (project.hasProperty("appArgs")) {
+        args Eval.me(appArgs)
+    }
+}
 
 dependencies{
     compile group: 'org.antlr', name: 'antlr4', version: '4.5'
