--- a/src/extractor.conf
+++ b/src/extractor.conf
@@ -1,7 +1,8 @@
 #################################################################
 # PostgreSQL Configuration
 #################################################################
-postgreSQL.conn=jdbc:postgresql://localhost:10002/stackoverflow
+postgreSQL.conn=jdbc:postgresql://localhost:5432/stackoverflow
+# postgreSQL.conn=jdbc:postgresql://localhost:10002/stackoverflow
 postgreSQL.user=extractor
 postgreSQL.passwd=extractor
 
