imporve save snippets sQL to deal with already extracted snippets
need Postgres 9.5 or after

--- a/src/extractor.conf
+++ b/src/extractor.conf
@@ -1,4 +1,13 @@
 #################################################################
+# WARNING: This file has been moved to resources folder. It is
+# kept here just for compatible with previous version source code.
+# Will be removed in future.
+#
+#
+#################################################################
+
+
+#################################################################
 # PostgreSQL Configuration
 #################################################################
 postgreSQL.conn=jdbc:postgresql://localhost:5432/stackoverflow
