--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ sourceSets{
             srcDirs = ['src']
         }
 
+        resources{
+            srcDirs = ['resources']
+        }
+
     }
 }
 
